## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

traylib_includedir = $(pkgincludedir)

traylib_include_DATA = \
	trayicon.h

EXTRA_DIST = $(traylib_include_DATA)
